# akgentic-agent

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-collaboration.md
examples/: 00_example.py  04_simple_team.py  README.md  simple_team.py
src/akgentic/agent/: __init__.py  agent.py  config.py  human_proxy.py  messages.py  output_models.py
tests/agent/: _test_example_04.py  _test_simple_team.py  test_agent.py  test_agent_coverage.py  test_compact_clear_commands.py  test_human_proxy.py  test_initial_system_prompt.py  test_messages.py  test_mock_react_agent_wiring.py  test_on_stop_aclose.py  test_on_stop_close.py  test_output_models.py  test_simple_team.py  test_usage_summary.py
