[project]
name = "akgentic-agent"
version = "1.5.0"
description = "Collaborative agent patterns for the Akgentic framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "gpiroux", email = "geoffroy.piroux@weareyuma.com" }
]
keywords = ["agents", "ai", "team", "collaboration", "pydantic-ai"]

dependencies = [
    "pydantic>=2.0.0",
    "akgentic-core",
    "akgentic-llm",
    "akgentic-tool",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akgentic"]

# Note: akgentic-* dependencies have NO [tool.uv.sources] entry here.
# - Inside the akgentic-quick-start workspace, the workspace root's
#   [tool.uv.sources] resolves them as editable workspace members.
# - In standalone CI, they are built from RELEASE_BRANCH into a local
#   wheelhouse and installed via `uv pip install --find-links` — see ci.yml.

# Previously inherited from the akgentic-quick-start workspace root; the
# standalone-package CI no longer checks out the workspace.
# - asyncio_mode='auto' so async tests run (default is 'strict').
# - integration tests make real LLM calls (gated by OPENAI_API_KEY) and
#   poll for actor quiescence up to 60s; deselect them by default so CI
#   does not hang. Run them explicitly with `-m integration`.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests requiring a real LLM (OPENAI_API_KEY) — not run in default CI",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
